TNO-12 Add Elasticsearch consumer (#10)
Add dejavu service